plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.16'
}

group 'io.openliberty.tools'
version '0.0.1'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2019.3.3'
    plugins 'terminal'
    pluginName 'Open Liberty Tools'
}
patchPluginXml {
    changeNotes """
            """
}